welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: identifier expected but integer literal found.
	T[haut-1]=getCouleurSol();
               ^Array2:11: error: ']' expected but ';' found.
	T[haut-1]=getCouleurSol();
                                 ^